--- a/configs/ipq60xx-6.12-M2_Nowifi.config
+++ b/configs/ipq60xx-6.12-M2_Nowifi.config
@@ -90,13 +90,13 @@ CONFIG_PACKAGE_ca-certificates=y
 CONFIG_PACKAGE_cgi-io=y
 CONFIG_PACKAGE_cgroupfs-mount=y
 CONFIG_PACKAGE_chinadns-ng=y
-CONFIG_PACKAGE_containerd=m
+CONFIG_PACKAGE_containerd=n
 CONFIG_PACKAGE_coremark=y
 CONFIG_PACKAGE_default-settings=y
 CONFIG_PACKAGE_default-settings-chn=y
-CONFIG_PACKAGE_docker=m
-CONFIG_PACKAGE_docker-compose=m
-CONFIG_PACKAGE_dockerd=m
+CONFIG_PACKAGE_docker=n
+CONFIG_PACKAGE_docker-compose=n
+CONFIG_PACKAGE_dockerd=n
 CONFIG_PACKAGE_etherwake=y
 # CONFIG_PACKAGE_hostapd-common is not set
 
@@ -142,7 +142,7 @@ CONFIG_PACKAGE_kmod-crypto-lib-poly1305=y
 # CONFIG_PACKAGE_kmod-crypto-sha512 is not set
 CONFIG_PACKAGE_kmod-crypto-xxhash=y
 CONFIG_PACKAGE_kmod-dummy=y
-CONFIG_PACKAGE_kmod-fs-btrfs=y
+CONFIG_PACKAGE_kmod-fs-btrfs=n
 # CONFIG_PACKAGE_kmod-hwmon-core is not set
 # CONFIG_PACKAGE_kmod-i2c-core is not set
 CONFIG_PACKAGE_kmod-ifb=y
@@ -380,9 +380,9 @@ CONFIG_PACKAGE_luci-proto-wireguard=y
 CONFIG_PACKAGE_luci-proto-relay=y
 
 # Kernel modules
-CONFIG_PACKAGE_kmod-fs-exfat=y
-CONFIG_PACKAGE_kmod-fs-f2fs=y
-CONFIG_PACKAGE_kmod-fs-ntfs3=y
+CONFIG_PACKAGE_kmod-fs-exfat=n
+CONFIG_PACKAGE_kmod-fs-f2fs=n
+CONFIG_PACKAGE_kmod-fs-ntfs3=n
 CONFIG_PACKAGE_kmod-fs-vfat=y
 CONFIG_PACKAGE_kmod-nft-queue=y
 CONFIG_PACKAGE_kmod-tls=y
@@ -400,15 +400,15 @@ CONFIG_PACKAGE_kmod-tun=y
 # Libraries
 #CONFIG_PACKAGE_luci-lib-ipkg=y
 #CONFIG_PACKAGE_libopenssl-legacy=y
-CONFIG_PACKAGE_htop=y
+CONFIG_PACKAGE_htop=n
 CONFIG_PACKAGE_fuse-utils=y
 CONFIG_PACKAGE_openssh-sftp-server=y
-CONFIG_PACKAGE_tcpdump=y
+CONFIG_PACKAGE_tcpdump=n
 CONFIG_PACKAGE_openssl-util=y
 CONFIG_PACKAGE_resize2fs=y
 CONFIG_PACKAGE_qrencode=y
 CONFIG_PACKAGE_smartmontools-drivedb=y
-CONFIG_PACKAGE_usbutils=y
+CONFIG_PACKAGE_usbutils=n
 CONFIG_PACKAGE_default-settings=y
 CONFIG_PACKAGE_default-settings-chn=y
 
