--- a/.github/workflows/ipq60xx-6.12-M2_Nowifi.yml
+++ b/.github/workflows/ipq60xx-6.12-M2_Nowifi.yml
@@ -46,10 +46,24 @@ jobs:
           sudo -E apt-get -y purge azure-cli ghc* zulu* llvm* firefox google* dotnet* powershell openjdk* mongodb* moby* || true
           sudo -E apt-get -y update
           sudo -E apt-get -y install $(curl -fsSL is.gd/depends_ubuntu_2204)
+          sudo -E apt-get -y install libncurses-dev ncurses-term  # 新增
           sudo -E systemctl daemon-reload
           sudo -E apt-get -y autoremove --purge
           sudo -E apt-get -y clean
           sudo timedatectl set-timezone "$TZ"
+
+      - name: Generate Variables
+        run: |
+          cp "$CONFIG_FILE" "$OPENWRT_PATH/.config"
+          cd "$OPENWRT_PATH" || exit 1
+          export TERM=dumb  # 设置终端类型
+          make defconfig > /dev/null 2>&1 || true
+          SOURCE_REPO="$(echo "$REPO_URL" | awk -F '/' '{print $(NF)}')"
+          echo "SOURCE_REPO=$SOURCE_REPO" >> $GITHUB_ENV
+          DEVICE_TARGET=$(grep 'CONFIG_TARGET_BOARD=' .config | awk -F '"' '{print $2}')
+          echo "DEVICE_TARGET=$DEVICE_TARGET" >> $GITHUB_ENV
+          DEVICE_SUBTARGET=$(grep 'CONFIG_TARGET_SUBTARGET=' .config | awk -F '"' '{print $2}')
+          echo "DEVICE_SUBTARGET=$DEVICE_SUBTARGET" >> $GITHUB_ENV
 
       - name: Combine Disks
         uses: easimon/maximize-build-space@master
