--- a/.github/workflows/ipq60xx-6.12-M2_Nowifi.yml
+++ b/.github/workflows/ipq60xx-6.12-M2_Nowifi.yml
@@ -48,12 +48,12 @@ jobs:
           sudo rm -rf /usr/share/dotnet /etc/apt/sources.list.d /usr/local/lib/android $AGENT_TOOLSDIRECTORY || true
           sudo -E apt-get -y purge azure-cli ghc* zulu* llvm* firefox google* dotnet* powershell openjdk* mongodb* moby* || true
           sudo -E apt-get -y update
-          sudo -E apt-get -y install $(curl -fsSL is.gd/depends_ubuntu_2204)
-          libev-dev \         # 新增
-          libpam0g-dev \      # 新增
-          liblzma-dev \       # 新增
-          libsnmp-dev         # 新增
-          sudo -E apt-get -y install libncurses-dev ncurses-term
+          sudo -E apt-get -y install $(curl -fsSL is.gd/depends_ubuntu_2204) || exit 1
+          sudo -E apt-get -y install libev-dev \
+                                   libpam0g-dev \
+                                   liblzma-dev \
+                                   libsnmp-dev || exit 1
+          sudo -E apt-get -y install libncurses-dev ncurses-term || exit 1
           sudo -E systemctl daemon-reload
           sudo -E apt-get -y autoremove --purge
           sudo -E apt-get -y clean
