--- a/.github/workflows/ipq60xx-6.12-M2_Nowifi.yml
+++ b/.github/workflows/ipq60xx-6.12-M2_Nowifi.yml
@@ -127,6 +127,12 @@ jobs:
           ./scripts/feeds update -a
           ./scripts/feeds install -a
 
+      - name: Install Missing Dependencies
+        run: |
+          cd "$OPENWRT_PATH" || exit 1
+          ./scripts/feeds update -a
+          ./scripts/feeds install -f libev lm-sensors wsdd2 libpam liblzma libnetsnmp kmod-qca-nss-drv kmod-qca-nss-drv-wifi-meshmgr luci luci-i18n-base-zh-cn luci-app-samba4 || exit 1
+
       - name: Load Custom Configuration
         run: |
           cd "$OPENWRT_PATH" || exit 1
@@ -140,9 +146,6 @@ jobs:
           echo "应用自定义配置..."
           cp -f "$GITHUB_WORKSPACE/$CONFIG_FILE" .config
           make defconfig
-          chmod +x "$DIY_SCRIPT"
-          cd "$OPENWRT_PATH" || exit 1
-          bash "$GITHUB_WORKSPACE/$DIY_SCRIPT"
 
           # 严格验证插件禁用状态
           forbidden_plugins=(
@@ -174,7 +177,7 @@ jobs:
         run: |
           cd $OPENWRT_PATH
           echo -e "$(nproc) thread compile"
-          make -j$(nproc) || make -j1 || make -j1 V=s
+          make -j$(nproc) V=s || make -j1 || make -j1 V=s
           if [ $? -ne 0 ]; then
             echo "编译失败，请检查日志！"
             exit 1
