--- a/configs/ipq60xx-6.12-nowifi.config
+++ b/configs/ipq60xx-6.12-nowifi.config
@@ -16,6 +16,7 @@ CONFIG_PACKAGE_luci-app-netspeedtest=y
 #CONFIG_PACKAGE_luci-app-adguardhome=y
 #CONFIG_PACKAGE_luci-app-adguardhome_INCLUDE_binary=n
 #CONFIG_PACKAGE_luci-app-sqm=y
+CONFIG_PACKAGE_luci-app-nikki=y
 
 #组件调整
 CONFIG_PACKAGE_autocore=y
